# opengl-engine

./: CMakeLists.txt  README.md
extlibs/glad/include/glad/: glad.h
extlibs/glad/src/: glad.c
include/: shader_loader.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: main.cpp  shader_loader.cpp
